advanced-demo/debug-pod.yaml
kind: Pod
apiVersion: v1
metadata:
  name: ubuntu
  namespace: default
  labels:
    app/eai: '1110111'
    app.kubernetes.io/instance: ubuntu
spec:
  containers:
    - name: ubuntu
      image: 'ubuntu:20.04'
      command:
        - /bin/bash
        - '-c'
        - '--'
      args:
        - while true; do sleep 30; done;
      resources: {}
