advanced-demo/target-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: dvwa
  name: dvwa
  namespace: bad-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dvwa
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: dvwa
    spec:
      containers:
      - image: vulnerables/web-dvwa
        imagePullPolicy: Always
        name: web-dvwa
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: dvwa
  name: dvwa
  namespace: bad-apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 80
  selector:
    app: dvwa
  sessionAffinity: None
  type: ClusterIP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: webgoat
  name: webgoat
  namespace: bad-apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webgoat
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: webgoat
    spec:
      containers:
      - image: webgoat/webgoat-8.0:v8.0.0.M14
        imagePullPolicy: Always
        name: web-webgoat
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: webgoat
  name: webgoat
  namespace: bad-apps
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: webgoat
  sessionAffinity: None
  type: ClusterIP
